blue/kube/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubedemo-service
spec:
  type: NodePort
  selector:
    app: kubedemo
  ports:
  - port: 80
    targetPort: 80
